--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,9 +9,9 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Cucumber UI with TestNG Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">75,627</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Cucumber UI with TestNG Test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">72,277</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Cucumber UI with TestNG Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.dms.runner.TestRunner</td><td><a href="#m0">tearDownClass</a></td><td rowspan="1">1700646784872</td><td rowspan="1">340</td></tr><tr><th colspan="4">Cucumber UI with TestNG Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.dms.runner.TestRunner</td><td><a href="#m1">runScenario</a></td><td rowspan="1">1700646710562</td><td rowspan="1">74307</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Cucumber UI with TestNG Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.dms.runner.TestRunner</td><td><a href="#m0">tearDownClass</a></td><td rowspan="1">1700719605112</td><td rowspan="1">309</td></tr><tr><th colspan="4">Cucumber UI with TestNG Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.dms.runner.TestRunner</td><td><a href="#m1">runScenario</a></td><td rowspan="1">1700719534086</td><td rowspan="1">71024</td></tr></tbody>
 </table>
 <h2>Cucumber UI with TestNG Test</h2><h3 id="m0">com.dms.runner.TestRunner#tearDownClass</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">com.google.gson.JsonIOException: Failed making field &apos;java.lang.Throwable#detailMessage&apos; accessible; either increase its visibility or write a custom TypeAdapter for its declaring type.
 	at com.google.gson.internal.bind.ReflectiveTypeAdapterFactory.getBoundFields(ReflectiveTypeAdapterFactory.java:286)
@@ -60,6 +60,14 @@
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 	... 69 more
 ... Removed 32 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.dms.runner.TestRunner#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Validation for VIN search popup&quot;</td><td>&quot;Addtional Details Tab of Add Invoice&quot;</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.dms.runner.TestRunner#runScenario</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>&quot;Loyalty Exchange / Additional Car Benefits validation of old car offer&quot;</td><td>&quot;Addtional Details Tab of Add Invoice&quot;</td></tr><tr><th colspan="2">Exception</th></tr><tr><td colspan="2"><div class="stacktrace">java.lang.IndexOutOfBoundsException: Index 6 out of bounds for length 0
+	at java.base/jdk.internal.util.Preconditions.outOfBounds(Preconditions.java:64)
+	at java.base/jdk.internal.util.Preconditions.outOfBoundsCheckIndex(Preconditions.java:70)
+	at java.base/jdk.internal.util.Preconditions.checkIndex(Preconditions.java:266)
+	at java.base/java.util.Objects.checkIndex(Objects.java:361)
+	at java.base/java.util.ArrayList.get(ArrayList.java:427)
+	at com.dms.stepdefinitions.AdditionalDetailsStepDef.user_choose_loyalty_card(AdditionalDetailsStepDef.java:411)
+	at ✽.User choose Loyalty Card for scenario 7(file:///C:/Users/tanugupta02/git/dms_Invoice_UIAutomation/src/test/java/com/dms/featurefiles/AdditionalDetails.feature:345)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
